# horizon-telemetry-dashboard

./: .gitignore  AUTHORS  ChangeLog  MANIFEST.in  README.rst  requirements.txt  setup.cfg
debian/: changelog  control  copyright  install  postrm
debian/source/: lintian-overrides
enabled/: _95_telemetry.py
horizon_telemetry/: dashboard.py  forms.py  overrides.py  tabs.py  urls.py  views.py
horizon_telemetry/compute/: panel.py  tables.py  tests.py  urls.py  views.py
horizon_telemetry/compute/templates/compute/: detail.html  index.html
horizon_telemetry/control/: panel.py  tables.py  urls.py  utils.py  views.py
horizon_telemetry/control/templates/control/: detail.html  index.html
horizon_telemetry/overview/: panel.py  tables.py  urls.py  views.py
horizon_telemetry/overview/templates/overview/: gauges.html  index.html
horizon_telemetry/static/telemetry/js/: graph_utils.js
horizon_telemetry/static/telemetry/scss/: _telemetry.scss  telemetry.scss
horizon_telemetry/templates/telemetry/: _instance_detail_telemetry.html  _range_form.html  test.html  usage.html
horizon_telemetry/templatetags/: graph_helpers.py
horizon_telemetry/utils/: __init__.py  graphite.py  graphite_proxy.py  influxdb_client.py  memoized.py  tables.py
