[metadata]
name = horizon-telemetry-dashboard
summary = Horizon Telemetry Dashboard
description-file =
    README.rst
author = Michael Kuty
author-email = michael.kuty@tcpcloud.eu
home-page = https://git.tcpcloud.eu/horizon-modules/horizon-telemetry-dashboard
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Internet :: WWW/HTTP

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    horizon_telemetry

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[pytest]
python_files=test_*.py *tests.py

[flake8]
exclude=requirements,.tox,.travis,docs
